bynkc/tests/fixtures/positive/390_held_fn_disposes/src/room.bynk
context room

type ServerFrame = { text: String }

-- #718: a top-level `fn` that receives a held connection *owns* it and disposes
-- it by closing — the linearity pass now runs over this body too, and it passes.
fn dispose(c: Connection[ServerFrame]) -> Effect[()] {
  let _ <- c.close()
  ()
}

agent Room {
  key id: String
  store conns: Map[String, Connection[ServerFrame]]

  -- The framework supplies `conn` (a held handler parameter, §2.9.4). Passing it
  -- to `dispose` transfers ownership onward — no leak in the handler — and
  -- `dispose` closes it, so the `fn` body is clean too.
  on call greet(conn: Connection[ServerFrame]) -> Effect[()] {
    let _ <- dispose(conn)
    ()
  }
}
