bynkc/tests/fixtures/negative/393_held_fn_body_double_close/input.bynk
-- #718: a consuming operation on a held value is diagnosed inside `fn` bodies
-- too. Closing `c` twice is a use-after-consume, exactly as in a handler body.
commons room {
  type ServerFrame = { text: String }

  fn dbl(c: Connection[ServerFrame]) -> Effect[()] {
    let _ <- c.close()
    let _ <- c.close()
    ()
  }
}
